app_ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  tls:
  - hosts:
    - app.globaldrum.com
    secretName: app-globaldrum-com-tls 
  rules:
  - host: "app.globaldrum.com"
