dashboard_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kdashboard-domain-ingress
  namespace: kubernetes-dashboard 
spec:
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.globaldrum.com`)
    kind: Rule
    services:
    - name: kubernetes-dashboard 
      port: 443 
  tls:
    secretName: kdashboard-globaldrum-com-tls
