traefik_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-domain-ingress
  namespace: kube-system 
spec:
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.globaldrum.com`)
    kind: Rule
    services:
      - name: api@internal
        kind: TraefikService
#     middlewares:
#       - name: traefik-dashboard-auth # Referencing the BasicAuth middleware
#         namespace: default 
  tls:
    secretName: portainer-globaldrum-com-tls 
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: traefik-dashboard-auth
#   namespace: default
# spec:
#   basicAuth:
#     secret: traefik-dashboard-auth-secret
